--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "multipipe": "^1.0.2",
     "stream-combiner2": "^1.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "github:gulpjs/gulp#4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
