--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "^3.0.0",
     "del": "^3.0.0",
     "gulp": "^4.0.0-alpha.2",
+    "gulp-pug": "^3.3.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-csso": "^3.0.0",
     "gulp-debug": "^3.1.0",
